[package]
name = "mongo-leaf"
version = "0.1.0"
authors = ["Cajun <zac@kleinpeter.org>"]
edition = "2018"

[dependencies]
libc        = "0.2"
bson = "0.14.0"
rand = "0.7.2"
failure = "0.1.6"
failure_derive = "0.1.6"
futures = "0.3.1"

#[badges]
#gitlab = { repository = "...", branch = "master" }

[dependencies.mongo-driver]
path = "mongo-driver"
version = "1.15.2"
